manifest/apps-kustomize/base/event-statistics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: <
      ["fights-kafka","apicurio","otel-collector",{"apiVersion":"apps/v1","kind":"StatefulSet","name":"fights-zookeeper"}]
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/part-of: event-statistics
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-statistics
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
        app.openshift.io/vcs-ref: main
        app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8085"
        prometheus.io/scheme: http
        sidecar.istio.io/inject: "false"
      labels:
        app: event-statistics
        version: v1
        application: event-stats
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/voravitl/event-statistics:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8085
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: event-statistics
          ports:
            - containerPort: 8085
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8085
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
