manifest/apps-kustomize/base/event-statistics-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8085
  selector:
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
  type: ClusterIP
